--- a/MarketWatch/MarketWatch/Client/Pages/Dashboard/StockChart.razor
+++ b/MarketWatch/MarketWatch/Client/Pages/Dashboard/StockChart.razor
@@ -2,28 +2,32 @@
 @using ExportType = Syncfusion.Blazor.Charts.ExportType
 @inherits StockChartBase;
 
+
+
 <div class="container">
     @if (IsCompanyChosen)
     {
-        <h3>Stonks: @TickerName</h3>
         <SfSpinner @bind-Visible="SpinnerVisible" Label="Stock Chart..." Size="50" Type="@SpinnerType.Bootstrap"></SfSpinner>
+        <h3>Stonks: @TickerName</h3>
+
+        <SfStockChart @ref="StockChart" Title="@TickerName" EnableSelector="false" EnableCustomRange="false" ExportType="new List<ExportType>() {}">
+            <StockChartSeriesCollection>
+                <StockChartSeries
+                    DataSource="@Stocks"
+                    Type="ChartSeriesType.HiloOpenClose"
+                    XName="Date"
+                    High="High"
+                    Low="Low"
+                    Open="Open"
+                    Close="Close"
+                    Volume="Volume"
+                    Name="@TickerName">
+                </StockChartSeries>
+            </StockChartSeriesCollection>
+        </SfStockChart>
         if (Stocks.Any())
         {
-            <SfStockChart Title="@TickerName" EnableSelector="false" EnableCustomRange="false" ExportType="new List<ExportType>() {}">
-                <StockChartSeriesCollection>
-                    <StockChartSeries
-                        DataSource="@Stocks"
-                        Type="ChartSeriesType.HiloOpenClose"
-                        XName="Date"
-                        High="High"
-                        Low="Low"
-                        Open="Open"
-                        Close="Close"
-                        Volume="Volume"
-                        Name="@TickerName">
-                    </StockChartSeries>
-                </StockChartSeriesCollection>
-            </SfStockChart>
+            Vis = true;
         }
         else
         {
