--- a/MarketWatch/MarketWatch/Server/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MarketWatch/MarketWatch/Server/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,38 +1,8 @@
 @page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Register";
-}
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr/>
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control"/>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control"/>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control"/>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-
-
-    <section class="vh-100 custom">
+<section class="vh-100 gradient">
+    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -42,46 +12,33 @@
                             <div class="mb-md-5 mt-md-4 pb-5">
 
                                 <h2 class="fw-bold mb-2 text-uppercase">Register</h2>
+                                <div asp-validation-summary="All" class="text-danger"></div>
                                 <p class="text-white-50 mb-5">Please enter your login and password!</p>
-
                                 <div class="form-outline form-white mb-4">
-                                    <input type="email" class="form-control form-control-lg"/>
-                                    <label class="form-label">Email</label>
-                                </div>
-
-                                <div class="form-outline form-white mb-4">
-                                    <input type="password" class="form-control form-control-lg"/>
-                                    <label class="form-label">Password</label>
+                                    
+                                    <input asp-for="Input.Email" class="form-control form-control-lg"/>
+                                    <label asp-for="Input.Email" class="form-label"></label>
+                                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input type="password" class="form-control form-control-lg"/>
-                                    <label class="form-label">Confirm Password</label>
+                                    <input asp-for="Input.Password" class="form-control form-control-lg"/>
+                                    <label asp-for="Input.Password" class="form-label"></label>
+                                    <span asp-validation-for="Input.Password" class="text-danger"></span>
                                 </div>
 
-                                <p class="small mb-5 pb-lg-2">
-                                    <a class="text-white-50" href="#!">Forgot password?</a>
-                                </p>
-
-                                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-
-                                <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                                    <a href="#!" class="text-white">
-                                        <i class="fab fa-facebook-f fa-lg"></i>
-                                    </a>
-                                    <a href="#!" class="text-white">
-                                        <i class="fab fa-twitter fa-lg mx-4 px-2"></i>
-                                    </a>
-                                    <a href="#!" class="text-white">
-                                        <i class="fab fa-google fa-lg"></i>
-                                    </a>
+                                <div class="form-outline form-white mb-4">
+                                    <input asp-for="Input.ConfirmPassword" class="form-control form-control-lg"/>
+                                    <label asp-for="Input.ConfirmPassword" class="form-label"></label>
+                                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                                 </div>
 
+                                <button class="btn btn-outline-light btn-lg px-5" type="submit">Sign Up</button>
                             </div>
 
                             <div>
                                 <p class="mb-0">
-                                    Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                                    Already have an account? <a class="text-white-50 fw-bold" asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl"> Log In </a>
                                 </p>
                             </div>
 
@@ -90,41 +47,27 @@
                 </div>
             </div>
         </div>
-    </section>
-
-
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr/>
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+    </form>
+</section>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial"/>
 }
+
+<style>
+    .gradient {
+        /* fallback for old browsers */
+        background: #6a11cb;
+    
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+    }
+    
+    .container {
+        max-width: 1300px;
+    }
+    
+</style>
